[package]
name = "lightyear_inputs"
version = "0.25.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_transport/std"]
client = [
  "lightyear_connection/client",
  "lightyear_messages/client",
  "lightyear_sync/client",
  "lightyear_replication/client",
  "lightyear_transport/client",
]
server = [
  "lightyear_connection/server",
  "lightyear_messages/server",
  "lightyear_sync/server",
  "lightyear_link",
  "lightyear_transport/server",
]
metrics = ["dep:metrics", "std"]
prediction = ["dep:lightyear_prediction"]
interpolation = ["dep:lightyear_interpolation"]


[dependencies]
lightyear_connection.workspace = true
lightyear_core.workspace = true
lightyear_sync = { workspace = true, optional = true }
lightyear_link = { workspace = true, optional = true }
lightyear_messages.workspace = true
lightyear_transport.workspace = true
lightyear_replication.workspace = true
lightyear_prediction = { workspace = true, optional = true }
lightyear_interpolation = { workspace = true, optional = true }

# utils
metrics = { workspace = true, optional = true }
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
