[package]
name = "lightyear_inputs_bei"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adds integration to network inputs from the bevy_enhanced_input crate for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
    "serde/std",
]
client = [
    "lightyear_inputs/client"
]
server = [
    "lightyear_inputs/server"
]

[dependencies]
lightyear_core.workspace = true
lightyear_inputs.workspace = true
lightyear_utils.workspace = true

# inputs
bevy_enhanced_input.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true
