[package]
name = "lightyear_inputs_bei"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adds integration to network inputs from the bevy_enhanced_input crate for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_inputs/std"]
client = ["lightyear_inputs/client"]
server = ["lightyear_inputs/server", "lightyear_connection"]

[dependencies]
lightyear_core.workspace = true
lightyear_inputs.workspace = true
lightyear_utils.workspace = true
lightyear_connection = { workspace = true, optional = true }

# inputs
bevy_enhanced_input.workspace = true

# utils
thiserror.workspace = true
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true

[dev-dependencies]
bevy.workspace = true

[lints]
workspace = true
