[package]
name = "lightyear_inputs_bei"
version = "0.26.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Adds integration to network inputs from the bevy_enhanced_input crate for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_inputs/std"]
client = ["lightyear_inputs/client"]
server = ["lightyear_inputs/server"]

[dependencies]
lightyear_core.workspace = true
lightyear_inputs.workspace = true
lightyear_replication.workspace = true
lightyear_serde.workspace = true
lightyear_link.workspace = true
lightyear_connection.workspace = true
lightyear_messages.workspace = true

# inputs
bevy_enhanced_input.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

[dev-dependencies]
bevy.workspace = true
test-log.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
