[package]
name = "lightyear_inputs_leafwing"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
]
client = [
    "lightyear_inputs/client"
]
server = [
    "lightyear_inputs/server"
]

[dependencies]
lightyear_inputs.workspace = true
lightyear_core.workspace = true

leafwing-input-manager.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true
bytes.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true
