[package]
name = "lightyear_inputs_leafwing"
version = "0.26.0-rc2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = []
client = ["lightyear_inputs/client"]
server = ["lightyear_inputs/server"]

[dependencies]
lightyear_inputs.workspace = true
lightyear_core.workspace = true

leafwing-input-manager.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_derive.workspace = true
bevy_input.workspace = true
bevy_math.workspace = true
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_utils.workspace = true

[dev-dependencies]
test-log.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
