[package]
name = "lightyear_inputs_native"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "bevy/std",
    "bytes/std",
    "serde/std",
]
client = [
    "lightyear_inputs/client"
]
server = [
    "lightyear_inputs/server"
]

[dependencies]
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_connection.workspace = true
lightyear_core.workspace = true
lightyear_inputs.workspace = true
lightyear_sync.workspace = true
lightyear_messages.workspace = true
lightyear_transport.workspace = true
lightyear_prediction.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true
bytes.workspace = true

# bevy
bevy.workspace = true

[lints]
workspace = true
