[package]
name = "lightyear_inputs_native"
version = "0.21.0-rc.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_inputs/std"]
client = ["lightyear_inputs/client"]
server = ["lightyear_inputs/server"]

[dependencies]
lightyear_core.workspace = true
lightyear_inputs.workspace = true

# utils
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true

[lints]
workspace = true
