[package]
name = "lightyear_interpolation"
version = "0.23.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_replication/std"]
metrics = ["dep:metrics", "std"]

[dependencies]
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_core.workspace = true
lightyear_connection.workspace = true
lightyear_messages.workspace = true
lightyear_replication = { workspace = true, features = ["interpolation"] }
lightyear_sync = { workspace = true, features = ["client"] }

# utils
metrics = { workspace = true, optional = true }
tracing.workspace = true

# serde
serde.workspace = true

# bevy
bevy_app.workspace = true
bevy_derive.workspace = true
bevy_ecs.workspace = true
bevy_math = { workspace = true, features = ["curve"] }
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_time.workspace = true
bevy_utils.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
