[package]
name = "lightyear_link"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = []
test_utils = []

[dependencies]
lightyear_core.workspace = true
lightyear_utils.workspace = true

# utils
rand.workspace = true
tracing.workspace = true
bytes.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs.workspace = true
bevy_reflect.workspace = true

[lints]
workspace = true
