[package]
name = "lightyear_macros"
version = "0.21.0-rc.2"
authors.workspace = true
edition.workspace = true
description = "Procedural macros for the lightyear networking library"
readme = "README.md"
repository = "https://github.com/cBournhonesque/lightyear"
keywords = ["bevy", "multiplayer", "networking", "netcode", "gamedev"]
categories = ["game-development", "network-programming"]
license.workspace = true
exclude = ["/tests"]

[lib]
proc-macro = true

[dependencies]
# deps specific to macros, not in top-level Cargo workspace
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
