[package]
name = "lightyear_messages"
version = "0.21.0-rc.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = [
    "lightyear_utils/std",
    "lightyear_serde/std",
    "lightyear_core/std",
    "lightyear_transport/std",
    "bevy/std",
    "bincode/std",
    "bytes/std",
    "serde/std",
]
client = ["lightyear_connection/client"]
server = ["lightyear_connection/server"]
test_utils = []

[dependencies]
lightyear_link.workspace = true
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_core.workspace = true
lightyear_transport.workspace = true
lightyear_connection.workspace = true

# utils
tracing.workspace = true
thiserror.workspace = true

# serde
bincode.workspace = true
serde.workspace = true
bytes.workspace = true

# bevy
bevy.workspace = true

[dev-dependencies]
lightyear_link.workspace = true
lightyear_macros.workspace = true
lightyear_transport = {workspace = true, features = ["test_utils"]}
test-log.workspace = true

[lints]
workspace = true
