[package]
name = "lightyear_messages"
version = "0.22.5"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_transport/std"]
client = ["lightyear_connection/client"]
server = ["lightyear_link", "lightyear_connection/server"]
test_utils = []

[dependencies]
lightyear_link = { workspace = true, optional = true }
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_core.workspace = true
lightyear_transport.workspace = true
lightyear_connection.workspace = true

# utils
tracing.workspace = true
thiserror.workspace = true

# serde
bincode = { workspace = true, optional = true }
serde.workspace = true
bytes.workspace = true

# bevy
bevy_app.workspace = true
bevy_ecs = { workspace = true, features = ["serialize"] }
bevy_reflect.workspace = true

[dev-dependencies]
lightyear_link.workspace = true
lightyear_transport = { workspace = true, features = ["test_utils"] }
test-log.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
