[package]
name = "lightyear_prediction"
version = "0.21.0-rc.3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "IO primitives for the lightyear networking library"
repository = "https://github.com/cBournhonesque/lightyear"

[features]
default = ["std"]
std = ["lightyear_replication/std"]
server = ["dep:lightyear_messages"]
metrics = ["dep:metrics", "std"]

[dependencies]
lightyear_utils.workspace = true
lightyear_serde.workspace = true
lightyear_link.workspace = true
lightyear_core = { workspace = true }
lightyear_connection = { workspace = true }
lightyear_replication = { workspace = true, features = [
  "prediction",
  "interpolation",
] }
lightyear_sync.workspace = true
lightyear_messages = { workspace = true, optional = true }

# utils
metrics = { workspace = true, optional = true }
seahash.workspace = true
parking_lot.workspace = true
tracing.workspace = true

# serde
serde.workspace = true
bytes = { workspace = true, optional = true }

# bevy
bevy_app.workspace = true
bevy_diagnostic.workspace = true
bevy_ecs.workspace = true
bevy_math = { workspace = true, features = ["curve"] }
bevy_platform.workspace = true
bevy_reflect.workspace = true
bevy_time.workspace = true

[lints]
workspace = true
